[package]
name = "tlm"
version = "0.1.0"
authors = ["Alexi Peck <alexinicolaspeck@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tlm-server"
path = "src/main.rs"

[[bin]]
name = "tlm-worker"
path = "src/worker.rs"

[dependencies]
jwalk = "0.6.0"
regex = { version = "1", default-features = false }
argparse = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
diesel = { version = "1.4.7", default-features = false, features = ["postgres"] }
seahash = "4.1.0"
lazy_static = "1.4.0"
serde_json = { version = "1.0.67" }
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.0" }
tracing = "0.1.26"
rayon = "1.5.1"
fancy-regex = "0.7.1"
directories = "4.0"
bincode = "1.3.3"

#Web sockets related
tokio-tungstenite = {version="0.16.0"}
tokio = { version = "1.12.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "time", "signal"] }
futures-channel = "0.3"
url = "2.0.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await"] }
derivative = "2.2.0"
