[package]
name = "tlm"
version = "0.1.0"
authors = ["Alexi Peck <alexinicolaspeck@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tlm-server"
path = "src/bin/server.rs"

[[bin]]
name = "tlm-worker"
path = "src/bin/worker.rs"

[dependencies]
jwalk = "0.6.0"
regex = { version = "1.5.4", default-features = false }
argparse = "0.2.2"
serde = { version = "1.0.132", features = ["derive"] }
toml = "0.5.8"
diesel = { version = "1.4.8", default-features = false, features = ["postgres"] }
seahash = "4.1.0"
lazy_static = "1.4.0"
serde_json = { version = "1.0.73" }
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.4" }
tracing = "0.1.29"
rayon = "1.5.1"
fancy-regex = "0.7.1"
directories = "4.0.1"
bincode = "1.3.3"
rand = "0.8.4"

#Web sockets related
tokio-tungstenite = {version="0.16.1"}
tokio = { version = "1.15.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "time", "signal"] }
futures-channel = "0.3.19"
url = "2.2.2"
futures-util = { version = "0.3.19", default-features = false, features = ["async-await"] }
derivative = "2.2.0"
