[package]
name = "tlm"
version = "0.5.0"
authors = ["Alexi Peck <alexinicolaspeck@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tlm-server"
path = "src/bin/server.rs"

[[bin]]
name = "tlm-worker"
path = "src/bin/worker.rs"

[lib]
doctest = false

[dependencies]
jwalk = "0.6.0"
regex = { version = "1.5.5", default-features = false }
argparse = "0.2.2"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"
diesel = { version = "1.4.8", default-features = false, features = ["postgres"] }
seahash = "4.1.0"
lazy_static = "1.4.0"
serde_json = { version = "1.0.79" }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.11" }
tracing = "0.1.34"
rayon = "1.5.2"
fancy-regex = "0.10.0"
directories = "4.0.1"
rand = "0.8.5"

#Web sockets related
tokio-tungstenite = {version="0.17.1"}
tokio = { version = "1.18.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "time", "signal"] }
futures-channel = "0.3.21"
url = "2.2.2"
futures-util = { version = "0.3.21", default-features = false, features = ["async-await"] }
derivative = "2.2.0"
